--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
+  ],
+  "crons": [
+    {
+      "path": "/crons/tracking-version.js",
+      "schedule": "0 * * * *"
+    }
   ]
 }
