--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   "crons": [
     {
       "path": "/crons/tracking-version.js",
-      "schedule": "0 * * * *"
+      "schedule": "0 20 * * *"
     }
   ]
 }
