--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "sqlite3": "^5.1.7",
-    "telegraf": "^4.16.3",
-    "axios": "^1.7.7"
+    "mongoose": "^8.8.4",
+    "telegraf": "^4.16.3"
   }
 }
