fix: update cronjob url

--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   ],
   "crons": [
     {
-      "path": "/crons/tracking-version.js",
+      "path": "/api/crons/tracking-version",
       "schedule": "0 20 * * *"
     }
   ]
