--- a/vercel.json
+++ b/vercel.json
@@ -14,8 +14,8 @@
   ],
   "crons": [
     {
-      "path": "/api/crons/tracking-version",
-      "schedule": "0 20 * * *"
+      "path": "/api/tracking",
+      "schedule": "17 19 * * *"
     }
   ]
 }
